--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,4 +26,4 @@ jobs:
       - name: Delete old container
         run: docker rm -f ecom-backend-container
       - name: Run Docker Container
-        run: docker run -d -p 5555:5555(Configured Port:Configured Port) --name ecom-backend-container(New Container Name) -e MONGO_PASSWORD='${{ secrets.MONGO_PASSWORD }}' basavaraj684/backend
+        run: docker run -d -p 5555:5555 --name ecom-backend-container  -e MONGO_PASSWORD='${{ secrets.MONGO_PASSWORD }}' basavaraj684/backend
